Handle local overrides from a config file for datasources.

--- a/example.cfg
+++ b/example.cfg
@@ -1,7 +1,7 @@
 [DEFAULT]
-srsWGS84=+proj=latlong +ellps=WGS84 +datum=WGS84 +no_defs
+example_srs=+proj=latlong +ellps=WGS84 +datum=WGS84 +no_defs
 
 [world_land]
 type=shape
 file=http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/physical/110m-land.zip
-source_srs=%(srsWGS84)s
+source_srs=%(example_srs)s
